added CSS styling to the whole project

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>World clocks</h1>
+      <h1>World clock</h1>
       <select>
         <option value="">Select a city...</option>
         <option value="">New York</option>
@@ -18,18 +18,25 @@
         <option value="">London</option>
       </select>
       <div class="city">
-        <h2>Los Angeles</h2>
-        <div class="date">August 15th 2024</div>
-        <div class="time">01:48:15 AM</div>
+        <div>
+          <h2>Los Angeles</h2>
+          <div class="date">August 15th 2024</div>
+        </div>
+
+        <div class="time">01:48:15 <small>AM</small></div>
       </div>
       <div class="city">
-        <h2>Sydney</h2>
-        <div class="date">August 15th 2024</div>
-        <div class="time">01:48:15 AM</div>
+        <div>
+          <h2>Paris</h2>
+          <div class="date">August 15th 2024</div>
+        </div>
+
+        <div class="time">01:48:15 <small>AM</small></div>
       </div>
     </div>
     <footer>
-      This project was coded by Kasia Niemiec and is open sourced on
+      This project was coded by <strong>Kasia Niemiec</strong> and is open
+      sourced on
       <a href="https://github.com/kasianiemiec/world-clock" target="_blank"
         >Github</a
       >
