--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="src/style.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.46/moment-timezone-with-data-1970-2030.min.js"></script>
     <title>World clock</title>
-    <link rel="stylesheet" href="src/style.css" />
   </head>
   <body>
     <div class="container">
@@ -17,21 +17,21 @@
         <option value="">Athens</option>
         <option value="">London</option>
       </select>
-      <div class="city">
+      <div class="city" id="los-angeles">
         <div>
           <h2>Los Angeles</h2>
-          <div class="date">August 15th 2024</div>
+          <div class="date"></div>
         </div>
 
-        <div class="time">01:48:15 <small>AM</small></div>
+        <div class="time"></div>
       </div>
-      <div class="city">
+      <div class="city" id="paris">
         <div>
           <h2>Paris</h2>
-          <div class="date">August 15th 2024</div>
+          <div class="date"></div>
         </div>
 
-        <div class="time">01:48:15 <small>AM</small></div>
+        <div class="time"></div>
       </div>
     </div>
     <footer>
