added a "local time" as an option in select

--- a/index.html
+++ b/index.html
@@ -13,9 +13,13 @@
       <h1>World clock</h1>
       <select id="city">
         <option value="">Select a city...</option>
+        <option value="current">Local time</option>
         <option value="America/New_York">New York</option>
         <option value="Pacific/Auckland">Auckland</option>
         <option value="Europe/London">London</option>
+        <option value="Asia/Tokyo">Tokyo</option>
+        <option value="Europe/Athens">Athens</option>
+        <option value="Pacific/Honolulu">Honolulu</option>
       </select>
       <div id="cities">
         <div class="city" id="los-angeles">
