--- a/index.html
+++ b/index.html
@@ -38,6 +38,14 @@
 
           <div class="time"></div>
         </div>
+        <div class="city" id="sydney">
+          <div>
+            <h2>Sydney</h2>
+            <div class="date"></div>
+          </div>
+
+          <div class="time"></div>
+        </div>
       </div>
     </div>
     <footer>
